Trivial steps towards board representation, and built in test harness.

--- a/icfp.rc
+++ b/icfp.rc
@@ -6,9 +6,13 @@
 
 #[warn(no_vecs_not_implicitly_copyable)];
 
+use std;
+
 // Add your modules here, corresponding with your filenames.
 // REMEMBER TO ADD YOUR .rs FILES IN THE MAKEFILE TOO!
 // If you want to add subdirectories, make like:
 // mod shits { mod shit1; mod shit2; }
 
 mod hello;
+
+mod board;
