split to game_tree

--- a/icfp.rc
+++ b/icfp.rc
@@ -25,11 +25,15 @@ mod dlist;
 
 mod fuzzer;
 mod heuristics;
-mod play;
 
 mod path_find;
 mod path_find {
     mod brushfire;
+}
+
+mod game_tree;
+mod game_tree {
+    mod bblum;
 }
 
 mod signal;
