--- a/testseq.rc
+++ b/testseq.rc
@@ -26,6 +26,18 @@ mod dlist;
 mod fuzzer;
 mod heuristics;
 
+mod path_find;
+mod path_find {
+    mod brushfire;
+}
+
+mod game_tree;
+mod game_tree {
+    mod bblum;
+    mod simple;
+    mod tobruos;
+}
+
 mod signal;
 
 #[cfg(test)]
